--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        	<link rel="stylesheet" id="ie8-css"  href="assets/css/ie8.css" type="text/css" media="all">
 	<![endif]-->
 
-	<title>taikongfeizhu.com 2015</title>
+	<title>OpenWrt For HiWiFi</title>
 </head>
 
 <body data-spy="scroll" data-target=".main-navigation">
@@ -150,7 +150,7 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-01</p>
                             <p class="company">[2015-01-01] OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-01/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.zip">下载地址</a></p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-08/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.zip">下载地址</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content">
                             </p>
@@ -163,36 +163,9 @@
                                     支持获取正确的MAC地址（HiWiFi bdinfo中的文本格式）；<br/>
                                     修正了板级支持中LAN口、WAN口布局配置；<br/>
                                     极1S、极2通用。<br/>
+                                    内置基于ipset的Shadowsocks服务（ss-redir.sh）。<br/>
                                 </p>
 							</div><!-- /.about -->
-                        </div><!-- /.span3 -->
-                    </div><!-- /.speaker -->
-
-                    <div class="row speaker">
-                        <div class="span2 image center">
-                            <div class="image-box">
-                                <img class="lazy" data-original="assets/img/hc5761.png" alt="hc5761.png">
-                            </div><!-- /.image-box -->
-                        </div><!-- /.image -->
-
-                        <div class="span7">
-                            <p class="name">CC-2015-01-01</p>
-                            <p class="company">[2015-01-01] OpenWrt for HC5661/HC5761 (Chaos Calmer - r43594)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/CC-2015-01-01/openwrt-ramips-mt7620-hiwifi-hc5761-squashfs-sysupgrade.zip">下载地址</a></p>
-                            <p class="time"><span class="time-start">推荐指数:</span>4</p>
-                            <p class="content">
-                            </p>
-                        </div><!-- /.span7 -->
-
-                        <div class="span3">
-                            <div class="about">
-                                <h4>版本说明</h4>
-                                <p> 基于 OpenWrt trunk - r43594 编译；<br/>
-                                    支持获取正确的MAC地址（HiWiFi bdinfo中的文本格式）；<br/>
-                                    修正了板级支持中LAN口、WAN口布局配置；<br/>
-                                    极1S、极2通用。<br/>
-                                </p>
-                            </div><!-- /.about -->
                         </div><!-- /.span3 -->
                     </div><!-- /.speaker -->
 
@@ -210,7 +183,7 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-01</p>
                             <p class="company">[2015-01-01] OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-01/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.zip">下载地址</a></p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-08/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.zip">下载地址</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content">
                             </p>
@@ -223,40 +196,15 @@
                                     支持获取正确的MAC地址（HiWiFi bdinfo中的文本格式）；<br/>
                                     修正了板级支持中LAN口、WAN口布局配置；<br/>
                                     极1S、极2通用。<br/>
+                                    内置基于ipset的Shadowsocks服务（ss-redir.sh）。<br/>
                                 </p>
                             </div><!-- /.about -->
                         </div><!-- /.span3 -->
                     </div><!-- /.speaker -->
 
-                    <div class="row speaker">
-                        <div class="span2 image center">
-                            <div class="image-box">
-                                <img class="lazy" data-original="assets/img/hc5661.png" alt="hc5761.png">
-                            </div><!-- /.image-box -->
-                        </div><!-- /.image -->
+                   
 
-                        <div class="span7">
-                            <p class="name">CC-2015-01-01</p>
-                            <p class="company">[2015-01-01] OpenWrt for HC5661/HC5761 (Chaos Calmer - r43594)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/CC-2015-01-01/openwrt-ramips-mt7620-hiwifi-hc5761-squashfs-sysupgrade.zip">下载地址</a></p>
-                            <p class="time"><span class="time-start">推荐指数:</span>4</p>
-                            <p class="content">
-                            </p>
-                        </div><!-- /.span7 -->
-
-                        <div class="span3">
-                            <div class="about">
-                                <h4>版本说明</h4>
-                                <p> 基于 OpenWrt trunk - r43594 编译；<br/>
-                                    支持获取正确的MAC地址（HiWiFi bdinfo中的文本格式）；<br/>
-                                    修正了板级支持中LAN口、WAN口布局配置；<br/>
-                                    极1S、极2通用。<br/>
-                                </p>
-                            </div><!-- /.about -->
-                        </div><!-- /.span3 -->
-                    </div><!-- /.speaker -->
-
-                </div><!-- /.tab-2 -->
+                </div><!-- /.tab-3 -->
                 <div class="tab-pane fade" id="tab-3">
                     <div class="row speaker">
                         <div class="span2 image center">
@@ -268,7 +216,7 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-01</p>
                             <p class="company">[2015-01-01] OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-01/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.zip">下载地址</a></p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-08/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.zip">下载地址</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content">
                             </p>
@@ -281,40 +229,15 @@
                                     支持获取正确的MAC地址（HiWiFi bdinfo中的文本格式）；<br/>
                                     修正了板级支持中LAN口、WAN口布局配置；<br/>
                                     极1S、极2通用。<br/>
+                                    内置基于ipset的Shadowsocks服务（ss-redir.sh）。<br/>
                                 </p>
                             </div><!-- /.about -->
                         </div><!-- /.span3 -->
                     </div><!-- /.speaker -->
 
-                    <div class="row speaker">
-                        <div class="span2 image center">
-                            <div class="image-box">
-                                <img class="lazy" data-original="assets/img/hc5663.png" alt="hc5761.png">
-                            </div><!-- /.image-box -->
-                        </div><!-- /.image -->
+                    
 
-                        <div class="span7">
-                            <p class="name">CC-2015-01-01</p>
-                            <p class="company">[2015-01-01] OpenWrt for HC5661/HC5761 (Chaos Calmer - r43594)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/CC-2015-01-01/openwrt-ramips-mt7620-hiwifi-hc5761-squashfs-sysupgrade.zip">下载地址</a></p>
-                            <p class="time"><span class="time-start">推荐指数:</span>4</p>
-                            <p class="content">
-                            </p>
-                        </div><!-- /.span7 -->
-
-                        <div class="span3">
-                            <div class="about">
-                                <h4>版本说明</h4>
-                                <p> 基于 OpenWrt trunk - r43594 编译；<br/>
-                                    支持获取正确的MAC地址（HiWiFi bdinfo中的文本格式）；<br/>
-                                    修正了板级支持中LAN口、WAN口布局配置；<br/>
-                                    极1S、极2通用。<br/>
-                                </p>
-                            </div><!-- /.about -->
-                        </div><!-- /.span3 -->
-                    </div><!-- /.speaker -->
-
-                </div><!-- /.tab-1 -->
+                </div><!-- /.tab-4 -->
                 <div class="tab-pane fade" id="tab-4">
                     <div class="row speaker">
                         <div class="span2 image center">
