--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
 <body data-spy="scroll" data-target=".main-navigation">
 
-<div id="loading-start">
+<!--<div id="loading-start">
     <div id="loading_show">
         <img src="assets/img/loading.gif"/>努力加载中,请等待......
     </div>
-</div>
+</div>-->
 
 <div class="navigation">
     <div class="navbar navbar-fixed-top">
