--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="row speaker">
                         <div class="span2 image center">
                             <div class="image-box">
-                                <img class="lazy" data-original="assets/img/hc5761.png" alt="hc5761.png">
+                                <img class="lazy" src="assets/img/hc5761.png" alt="hc5761.png">
                             </div><!-- /.image-box -->
                         </div><!-- /.image -->
 
@@ -176,7 +176,7 @@
                     <div class="row speaker">
                         <div class="span2 image center">
                             <div class="image-box">
-                                <img class="lazy" data-original="assets/img/hc5661.png" alt="hc5761.png">
+                                <img class="lazy" src="assets/img/hc5661.png" alt="hc5761.png">
                             </div><!-- /.image-box -->
                         </div><!-- /.image -->
 
@@ -209,7 +209,7 @@
                     <div class="row speaker">
                         <div class="span2 image center">
                             <div class="image-box">
-                                <img class="lazy" data-original="assets/img/hc5663.png" alt="hc5761.png">
+                                <img class="lazy" src="assets/img/hc5663.png" alt="hc5761.png">
                             </div><!-- /.image-box -->
                         </div><!-- /.image -->
 
@@ -242,7 +242,7 @@
                     <div class="row speaker">
                         <div class="span2 image center">
                             <div class="image-box">
-                                <img class="lazy" data-original="assets/img/hc6361.png" alt="hc5761.png">
+                                <img class="lazy" src="assets/img/hc6361.png" alt="hc5761.png">
                             </div><!-- /.image-box -->
                         </div><!-- /.image -->
 
