--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-08</p>
                             <p class="company">[2015-01-08] OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-08/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.zip">下载地址</a></p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-08/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content">
                             </p>
@@ -183,7 +183,7 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-08</p>
                             <p class="company">[2015-01-08] OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-08/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.zip">下载地址</a></p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-08/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content">
                             </p>
@@ -216,7 +216,7 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-08</p>
                             <p class="company">[2015-01-08] OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-08/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.zip">下载地址</a></p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-08/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content">
                             </p>
@@ -249,7 +249,7 @@
                         <div class="span7">
                             <p class="name">尽请期待</p>
                             <p class="company">尽请期待</p>
-                            <p class="talk-title"><a target="_blank" href="#">下载地址</a></p>
+                            <p class="talk-title"><a target="_blank" href="">下载地址</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content">
                             </p>
