--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
                         </div><!-- /.image -->
 
                         <div class="span7">
-                            <p class="name">尽请期待</p>
-                            <p class="company">尽请期待</p>
-                            <p class="talk-title"><a target="_blank" href="">下载地址</a></p>
+                            <p class="name">OpenWrt官方版本</p>
+                            <p class="company">请在下载地址中搜索hc6361下载</p>
+                            <p class="talk-title"><a target="_blank" href="http://downloads.openwrt.org/barrier_breaker/14.07/ar71xx/generic/">下载地址</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content">
                             </p>
@@ -258,7 +258,7 @@
                         <div class="span3">
                             <div class="about">
                                 <h4>版本说明</h4>
-                                <p>尽请期待<br/>
+                                <p>参考https://openwrt.org/<br/>
                                 </p>
                             </div><!-- /.about -->
                         </div><!-- /.span3 -->
