--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
 	<![endif]-->
 
 	<title>OpenWrt For HiWiFi</title>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "//hm.baidu.com/hm.js?80e4d53e445920753eb3c9421f6cf3b0";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </head>
 
 <body data-spy="scroll" data-target=".main-navigation">
