--- a/index.html
+++ b/index.html
@@ -33,15 +33,6 @@
 	<![endif]-->
 
 	<title>OpenWrt For HiWiFi</title>
-    <script>
-        var _hmt = _hmt || [];
-        (function() {
-          var hm = document.createElement("script");
-          hm.src = "//hm.baidu.com/hm.js?80e4d53e445920753eb3c9421f6cf3b0";
-          var s = document.getElementsByTagName("script")[0]; 
-          s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
 </head>
 
 <body data-spy="scroll" data-target=".main-navigation">
@@ -366,6 +357,10 @@ sysupgrade -F -n openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin<br
             <div class="row">
                 <div class="copyright span9">
                     &copy;2015自豪地采用<a href="http://www.bootcss.com/" class=""  target="_blank">Bootstrap</a>&nbsp;&nbsp;感谢<a href="http://www.taikongfeizhu.com/" class=""  target="_blank">太空飞猪</a>提供Web模版
+                    <script type="text/javascript">
+                    var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1254056363'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/stat.php%3Fid%3D1254056363%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
+                    </script>
+
                 </div><!-- /.copyright -->
             </div><!-- /.row -->
         </div><!-- /.container -->
