--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
                         </div><!-- /.image -->
 
                         <div class="span7">
-                            <p class="name">BB-2015-01-08</p>
-                            <p class="company">[2015-01-08] OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-08/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a></p>
+                            <p class="name">BB-2015-01-09-2</p>
+                            <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content">
                             </p>
@@ -181,9 +181,9 @@
                         </div><!-- /.image -->
 
                         <div class="span7">
-                            <p class="name">BB-2015-01-08</p>
-                            <p class="company">[2015-01-08] OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-08/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a></p>
+                            <p class="name">BB-2015-01-09-2</p>
+                            <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content">
                             </p>
@@ -214,9 +214,9 @@
                         </div><!-- /.image -->
 
                         <div class="span7">
-                            <p class="name">BB-2015-01-08</p>
-                            <p class="company">[2015-01-08] OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-08/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a></p>
+                            <p class="name">BB-2015-01-09-2</p>
+                            <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content">
                             </p>
