--- a/index.html
+++ b/index.html
@@ -150,10 +150,9 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-09-2</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a></p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a> &nbsp;<a target="_blank" href="http://pan.baidu.com/s/1mg2zpQK" >百度网盘</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
-                            <p class="content">
-                            </p>
+                            <p class="content"></p>
                         </div><!-- /.span7 -->
 
                         <div class="span3">
@@ -183,10 +182,9 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-09-2</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a></p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a> &nbsp;<a target="_blank" href="http://pan.baidu.com/s/1mg2zpQK" >百度网盘</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
-                            <p class="content">
-                            </p>
+                            <p class="content"></p>
                         </div><!-- /.span7 -->
 
                         <div class="span3">
@@ -216,10 +214,9 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-09-2</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a></p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a> &nbsp;<a target="_blank" href="http://pan.baidu.com/s/1mg2zpQK" >百度网盘</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
-                            <p class="content">
-                            </p>
+                            <p class="content"></p>
                         </div><!-- /.span7 -->
 
                         <div class="span3">
@@ -251,8 +248,7 @@
                             <p class="company">请在下载地址中搜索hc6361下载</p>
                             <p class="talk-title"><a target="_blank" href="http://downloads.openwrt.org/barrier_breaker/14.07/ar71xx/generic/">下载地址</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
-                            <p class="content">
-                            </p>
+                            <p class="content"></p>
                         </div><!-- /.span7 -->
 
                         <div class="span3">
