--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-09-2</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a> &nbsp;<a target="_blank" href="http://pan.baidu.com/s/1mg2zpQK" >百度网盘</a></p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">直接下载</a> &nbsp;<a target="_blank" href="http://pan.baidu.com/s/1mg2zpQK" >百度网盘</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
                         </div><!-- /.span7 -->
@@ -182,7 +182,7 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-09-2</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a> &nbsp;<a target="_blank" href="http://pan.baidu.com/s/1mg2zpQK" >百度网盘</a></p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">直接下载</a> &nbsp;<a target="_blank" href="http://pan.baidu.com/s/1mg2zpQK" >百度网盘</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
                         </div><!-- /.span7 -->
@@ -214,7 +214,7 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-09-2</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">下载地址</a> &nbsp;<a target="_blank" href="http://pan.baidu.com/s/1mg2zpQK" >百度网盘</a></p>
+                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">直接下载</a> &nbsp;<a target="_blank" href="http://pan.baidu.com/s/1mg2zpQK" >百度网盘</a></p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
                         </div><!-- /.span7 -->
