--- a/index.html
+++ b/index.html
@@ -335,7 +335,8 @@ sysupgrade -F -n openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin<br
                 <div class="row features-description">
                   <div class="span1"></div>
                   <div class="span10 features-description">
-                      ....<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+                      QQ群55969444
+                      <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
                       <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
                   </div>
                   <div class="span1"></div>
