--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                         <div class="text-wrapper span3">
                             <h3>OpenWrt-HiWiFi</h3>
-                            <p class="features-description">待续</p>
+                            <p class="features-description">极路由 HC5761/HC5661/HC5663/HC6361 OpenWrt补丁(基于barrier_breaker分支),内置shadowsocks,pptp,ipset</p>
                         </div><!-- /.text-wrapper -->
                     </div><!-- /.row -->
                 </div><!-- /.item -->
