--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                         <div class="text-wrapper span3">
                             <h3>OpenWrt-HiWiFi</h3>
-                            <p class="features-description">极路由 HC5761/HC5661/HC5663/HC6361 OpenWrt补丁(基于barrier_breaker分支),内置shadowsocks,pptp,l2tp,ipset,pdnsd,ntfs-3g,samba等常用软件</p>
+                            <p class="features-description">极路由HC5761/HC5661/HC5663/HC6361 OpenWrt补丁(基于barrier_breaker分支)，内置shadowsocks，pptp，l2tp，ipset，pdnsd，ntfs-3g，samba等常用软件。</p>
                         </div><!-- /.text-wrapper -->
                     </div><!-- /.row -->
                 </div><!-- /.item -->
