--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 	<![endif]-->
 
 	<title>OpenWrt For HiWiFi</title>
+	<script>
+		var _czc = _czc || [];
+		_czc.push(["_setAccount", "1254056363"]);
+	</script>
 </head>
 
 <body data-spy="scroll" data-target=".main-navigation">
@@ -150,7 +154,17 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-09-2</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">直接下载</a> &nbsp;<a target="_blank" href="http://pan.baidu.com/s/1mg2zpQK" >百度网盘</a></p>
+                            <p class="talk-title">
+	                            <a target="_blank" 
+	                            	onclick="_czc.push(['_trackPageview', 'down_github_h5761', 'http://openwrt-hiwifi.github.io']);" 
+	                            	href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin"
+	                            	>直接下载</a>
+	                            &nbsp;
+	                            <a target="_blank" 
+	                            	onclick="_czc.push(['_trackPageview', 'down_baidu_h5761', 'http://openwrt-hiwifi.github.io']);" 
+	                            	href="http://pan.baidu.com/s/1mg2zpQK" >
+	                            	百度网盘</a>
+                            </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
                         </div><!-- /.span7 -->
@@ -182,7 +196,17 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-09-2</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">直接下载</a> &nbsp;<a target="_blank" href="http://pan.baidu.com/s/1mg2zpQK" >百度网盘</a></p>
+                            <p class="talk-title">
+	                            <a target="_blank" 
+	                            	onclick="_czc.push(['_trackPageview', 'down_github_h5661', 'http://openwrt-hiwifi.github.io']);" 
+	                            	href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin"
+	                            	>直接下载</a>
+	                            &nbsp;
+	                            <a target="_blank" 
+	                            	onclick="_czc.push(['_trackPageview', 'down_baidu_h5661', 'http://openwrt-hiwifi.github.io']);" 
+	                            	href="http://pan.baidu.com/s/1mg2zpQK" >
+	                            	百度网盘</a>
+                            </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
                         </div><!-- /.span7 -->
@@ -214,7 +238,17 @@
                         <div class="span7">
                             <p class="name">BB-2015-01-09-2</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title"><a target="_blank" href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin">直接下载</a> &nbsp;<a target="_blank" href="http://pan.baidu.com/s/1mg2zpQK" >百度网盘</a></p>
+                            <p class="talk-title">
+	                            <a target="_blank" 
+	                            	onclick="_czc.push(['_trackPageview', 'down_github_h5663', 'http://openwrt-hiwifi.github.io']);" 
+	                            	href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin"
+	                            	>直接下载</a>
+	                            &nbsp;
+	                            <a target="_blank" 
+	                            	onclick="_czc.push(['_trackPageview', 'down_baidu_h5663', 'http://openwrt-hiwifi.github.io']);" 
+	                            	href="http://pan.baidu.com/s/1mg2zpQK" >
+	                            	百度网盘</a>
+                            </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
                         </div><!-- /.span7 -->
