--- a/index.html
+++ b/index.html
@@ -40,13 +40,6 @@
 </head>
 
 <body data-spy="scroll" data-target=".main-navigation">
-
-<!--<div id="loading-start">
-    <div id="loading_show">
-        <img src="assets/img/loading.gif"/>努力加载中,请等待......
-    </div>
-</div>-->
-
 <div class="navigation">
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
@@ -155,15 +148,15 @@
                             <p class="name">BB-2015-01-09-2</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
                             <p class="talk-title">
-	                            <a target="_blank" 
+	                            <a target="_blank"
 	                            	onclick="_czc.push(['_trackPageview', 'down_github_h5761', 'http://openwrt-hiwifi.github.io']);" 
 	                            	href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin"
 	                            	>直接下载</a>
 	                            &nbsp;
 	                            <a target="_blank" 
 	                            	onclick="_czc.push(['_trackPageview', 'down_baidu_h5761', 'http://openwrt-hiwifi.github.io']);" 
-	                            	href="http://pan.baidu.com/s/1mg2zpQK" >
-	                            	百度网盘</a>
+	                            	href="http://pan.baidu.com/s/1mg2zpQK" 
+	                            	>百度网盘</a>
                             </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
@@ -204,8 +197,8 @@
 	                            &nbsp;
 	                            <a target="_blank" 
 	                            	onclick="_czc.push(['_trackPageview', 'down_baidu_h5661', 'http://openwrt-hiwifi.github.io']);" 
-	                            	href="http://pan.baidu.com/s/1mg2zpQK" >
-	                            	百度网盘</a>
+	                            	href="http://pan.baidu.com/s/1mg2zpQK" 
+	                            	>百度网盘</a>
                             </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
@@ -246,8 +239,8 @@
 	                            &nbsp;
 	                            <a target="_blank" 
 	                            	onclick="_czc.push(['_trackPageview', 'down_baidu_h5663', 'http://openwrt-hiwifi.github.io']);" 
-	                            	href="http://pan.baidu.com/s/1mg2zpQK" >
-	                            	百度网盘</a>
+	                            	href="http://pan.baidu.com/s/1mg2zpQK" 
+	                            	>百度网盘</a>
                             </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
@@ -280,7 +273,11 @@
                         <div class="span7">
                             <p class="name">OpenWrt官方版本</p>
                             <p class="company">请在下载地址中搜索hc6361下载</p>
-                            <p class="talk-title"><a target="_blank" href="http://downloads.openwrt.org/barrier_breaker/14.07/ar71xx/generic/">下载地址</a></p>
+                            <p class="talk-title">
+                            <a target="_blank" 
+                            	href="http://downloads.openwrt.org/barrier_breaker/14.07/ar71xx/generic/"
+                            	>下载地址</a>
+                            </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
                         </div><!-- /.span7 -->
